[package]
name = "eyedee"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.17", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Crypto"] }
